# arf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  dist-workspace.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check.yml  ci.yml  publish-crate.yml  release.yml
artifacts/: arf.schema.json
crates/arf-console/: Cargo.toml  build.rs
crates/arf-console/examples/: benchmark.rs
crates/arf-console/resources/manifest/: arf-manifest.rc  arf.exe.manifest
crates/arf-console/src/: cli.rs  console_mode.rs  fuzzy.rs  main.rs  r_parser.rs  test_utils.rs  traps.rs
crates/arf-console/src/completion/: completer.rs  menu.rs  meta.rs  mod.rs  path.rs  r_completer.rs  shell.rs  string_context.rs
crates/arf-console/src/config/: colors.rs  completion.rs  editor.rs  experimental.rs  history.rs  mod.rs  mode.rs  prompt.rs  r.rs  reprex.rs  startup.rs
crates/arf-console/src/config/snapshots/: arf__config__tests__schema_tests__config_schema.snap  arf__config__tests__schema_tests__default_config.snap
crates/arf-console/src/editor/: hinter.rs  keybindings.rs  mod.rs  mode.rs  prompt.rs  validator.rs  word_nav.rs
crates/arf-console/src/highlighter/: bracket_match.rs  meta_command.rs  mod.rs  r_regex.rs  r_tree_sitter.rs
crates/arf-console/src/history/: export.rs  import.rs  mod.rs  search.rs  storage.rs
crates/arf-console/src/ipc/: capture.rs  client.rs  mod.rs  protocol.rs  server.rs  session.rs
crates/arf-console/src/pager/: changelog.rs  help.rs  history_browser.rs  history_schema.rs  markdown.rs  mod.rs  objects_browser.rs  session_info.rs  style_convert.rs  text_utils.rs
crates/arf-console/src/pager/snapshots/: arf__pager__history_schema__tests__history_schema_output.snap
crates/arf-console/src/repl/: banner.rs  meta_command.rs  mod.rs  prompt.rs  reprex.rs  session_info.rs  shell.rs  state.rs
crates/arf-console/src/repl/snapshots/: arf__repl__banner__tests__banner_default_r_initialized.snap  arf__repl__banner__tests__banner_default_r_not_initialized.snap  arf__repl__banner__tests__banner_reprex_custom_comment.snap  arf__repl__banner__tests__banner_reprex_mode.snap  arf__repl__banner__tests__banner_vi_mode.snap
crates/arf-console/src/snapshots/: arf__cli__tests__completions_bash.snap  arf__cli__tests__completions_fish.snap  arf__cli__tests__completions_powershell.snap  arf__cli__tests__completions_zsh.snap  arf__cli__tests__help_history_export.snap  arf__cli__tests__help_history_import.snap  arf__cli__tests__help_long.snap
crates/arf-console/tests/: cli_tests.rs  headless_tests.rs  integration_tests.rs  ipc_tests.rs  pty_advanced_tests.rs  pty_basic_tests.rs  pty_bottom_margin_tests.rs  pty_input_tests.rs  pty_interactive_tests.rs  pty_ipc_tests.rs
crates/arf-console/tests/common/: mod.rs
crates/arf-console/tests/headless/: error_codes.rs  eval.rs  history.rs  lifecycle_flags.rs  mod.rs  output_encoding.rs  platform.rs  support.rs
crates/arf-console/tests/r-deps/: DESCRIPTION
crates/arf-harp/: Cargo.toml  README.md
crates/arf-harp/src/: completion.rs  error.rs  help.rs  lib.rs  object.rs  protect.rs  startup.rs  workspace.rs
crates/arf-harp/src/snapshots/: arf_harp__help__tests__rd_conversion_strips_if_html_content.snap
crates/arf-harp/tests/: completion.rs  help.rs  startup.rs  visibility.rs
crates/arf-libr/: Cargo.toml  LICENSE.md  README.md
crates/arf-libr/src/: error.rs  functions.rs  lib.rs  sys.rs  types.rs
crates/r-vignette-to-md/: Cargo.toml  README.md
crates/r-vignette-to-md/src/: lib.rs
demo/: arf.tape
docs/: configuration.md  editors.md  ipc.md
(+1 files in other folders)
