[package]
name = "arf-console"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A cross-platform R console written in Rust"

[[bin]]
name = "arf"
path = "src/main.rs"

[dependencies]
arf-libr.workspace = true
arf-harp.workspace = true
reedline.workspace = true
crossterm.workspace = true
crokey.workspace = true
nu-ansi-term.workspace = true
dirs.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
chrono.workspace = true
semver.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
clap_complete.workspace = true
schemars.workspace = true
regex.workspace = true
once_cell.workspace = true
nucleo-matcher.workspace = true
gethostname.workspace = true
tree-sitter.workspace = true
tree-sitter-r.workspace = true
libc.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[dev-dependencies]
insta.workspace = true
regex.workspace = true
tempfile.workspace = true
portable-pty.workspace = true
vt100.workspace = true
